--- a/main.html
+++ b/main.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
+	<div>
+        <p>My current favourite song is <a href="https://www.youtube.com/watch?v=Xg36nIVijU4" target="_blank">Yamuna Thatilo</a></p>
+    </div>
 	<!-- the entire body must be written by student -->
-	<div><p>My current favourite song is <a herf="https://www.youtube.com/watch?v=Xg36nIVijU4" target="_blank">Yamuna Tatilona</a</p>
-	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
